Adds snapshot tests for asserting responses

--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "test": "jest '.*\\.spec\\.js'; exit 0",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:update": "jest -u"
   }
 }
